Matin/Fix: Text alignment

--- a/packages/cashier/src/Sass/cashier.scss
+++ b/packages/cashier/src/Sass/cashier.scss
@@ -616,8 +616,7 @@
                 padding: 1.6rem 0;
             }
         }
-        &-resend,
-        &-sent {
+        &-resend {
             &-text {
                 font-size: 1.4rem;
                 line-height: 1.43;
